--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,7 +17,7 @@
         is redirected to on success (more details below)
         <input type="hidden" name="_target_path" value="/account" />
     #}
-    <input type="hidden" name="_target_path" value="/teste" />
+    <input type="hidden" name="_target_path" value="/profile" />
 
     <button type="submit">login</button>
 </form>
