--- a/templates/events/soirees.html.twig
+++ b/templates/events/soirees.html.twig
@@ -1,15 +1,13 @@
+<h1>Vue Liste Soirees</h1>
 {% if soirees is defined %}
     <table>
         {% for soiree in soirees %}
             <tr {{ soiree.id }}>
                 <td>{{ soiree.id }}</td>
                 <td>{{ soiree.nomSoiree }}</td>
-                <td>{{ soiree.localisation }}</td>
                 <td>Le {{ soiree.dateEvent|date('d-m-Y H:m') }}</td>
                 <td>{{ soiree.prix }} €</td>
-                <td>{{ soiree.details }}</td>
-                <td><img src="{{ soiree.banner }}" alt="{{ soiree.nomSoiree }}"></td>
-                <td><a href="/soiree-{{ soiree.id }}">Voir plus</a></td>
+                <td><a href="/soiree/{{ soiree.nomSoiree }}">Voir plus</a></td>
             </tr>
         {% endfor %}
     </table>
