--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,5 @@
 {# templates/security/login.html.twig #}
-{# ... you will probably extend your base template, like base.html.twig #}
+{# ... you will probably extend your base template, like index.html.twig #}
 
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
