--- a/templates/events/weekends.html.twig
+++ b/templates/events/weekends.html.twig
@@ -1,16 +1,16 @@
-<h1>Vue Liste Soirees</h1>
-{% if soirees is defined %}
+<h1>Vue Liste Weekends</h1>
+{% if weekends is defined %}
     <table>
-        {% for soiree in soirees %}
-            <tr {{ soiree.id }}>
-                <td>{{ soiree.id }}</td>
-                <td>{{ soiree.nomSoiree }}</td>
-                <td>Le {{ soiree.dateEvent|date('d-m-Y H:m') }}</td>
-                <td>{{ soiree.prix }} €</td>
-                <td><a href="/soiree/{{ soiree.nomSoiree }}">Voir plus</a></td>
+        {% for weekend in weekends %}
+            <tr {{ weekend.id }}>
+                <td>{{ weekend.id }}</td>
+                <td>{{ weekend.nom }}</td>
+                <td>Le weekend commencera le {{ weekend.dateDebut|date('d-m-Y H:m') }} et finira le {{ weekend.dateFin|date('d-m-Y H:m') }}</td>
+                <td>{{ weekend.prix }} €</td>
+                <td><a href="/weekend/{{ weekend.nom }}">Voir plus</a></td>
             </tr>
         {% endfor %}
     </table>
 {% else %}
-    Pas trouvé de Soirees :(
+    Pas trouvé de weekend :(
 {% endif %}
