--- a/templates/events/soirees.html.twig
+++ b/templates/events/soirees.html.twig
@@ -4,10 +4,10 @@
         {% for soiree in soirees %}
             <tr {{ soiree.id }}>
                 <td>{{ soiree.id }}</td>
-                <td>{{ soiree.nomSoiree }}</td>
-                <td>Le {{ soiree.dateEvent|date('d-m-Y H:m') }}</td>
+                <td>{{ soiree.nom }}</td>
+                <td>Le {{ soiree.date|date('d-m-Y H:m') }}</td>
                 <td>{{ soiree.prix }} €</td>
-                <td><a href="/soiree/{{ soiree.nomSoiree }}">Voir plus</a></td>
+                <td><a href="/soiree/{{ soiree.nom }}">Voir plus</a></td>
             </tr>
         {% endfor %}
     </table>
