--- a/templates/events/soiree.html.twig
+++ b/templates/events/soiree.html.twig
@@ -1,8 +1,8 @@
 {% if soiree is defined %}
-    <h3>Vue de la soirée : {{ soiree.nomSoiree }} id : {{ soiree.id }}</h3>
-    <img src="{{ soiree.banner }}" alt="{{ soiree.nomSoiree }}">
+    <h3>Vue de la soirée : {{ soiree.nom }} id : {{ soiree.id }}</h3>
+    <img src="{{ soiree.banner }}" alt="{{ soiree.nom}}">
     <p>Lieu  : {{ soiree.localisation }}</p>
-    <p>Elle aura lieu le {{ soiree.dateEvent|date('d-m-Y H:m') }}</p>
+    <p>Elle aura lieu le {{ soiree.date|date('d-m-Y H:m') }}</p>
     <p>Prévoir {{ soiree.prix }} euros pour l'entrée</p>
     <h4>Plus d'info ci-dessous  :</h4>
     <p>{{ soiree.details }}</p>
