--- a/templates/events/expositions.html.twig
+++ b/templates/events/expositions.html.twig
@@ -8,7 +8,7 @@
                 <tr {{ exposition.id }}>
                     <td>{{ exposition.id }}</td>
                     <td>{{ exposition.nom }}</td>
-                    <td>Le {{ exposition.dateEvent|date('d-m-Y H:m') }}</td>
+                    <td>Le {{ exposition.date|date('d-m-Y H:m') }}</td>
                     <td>{{ exposition.prix }} €</td>
                     <td><a href="/exposition/{{ exposition.nom}}">Voir plus</a></td>
                 </tr>
