--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Profil User</title>
+    <title>Admin page</title>
 </head>
 <body>
-    <h1>Profil User</h1>
-    <a href="/logout">Logout</a>
+
+admin page
+
 </body>
 </html>
