--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,102 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>BDE FURIES</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="{{ asset('asset/css/main.css') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <!-- Wrapper -->
+        <div id="wrapper">
+            <!-- Header -->
+            <header id="header" class="alt">
+                <a href="{{ path('home') }}" class="logo"><strong>BDE</strong> <span>IESA Multimédia</span></a>
+                <nav>
+                    <a href="#menu">Menu</a>
+                </nav>
+            </header>
+            <!-- Menu -->
+            <nav id="menu">
+                <ul class="links">
+                    <li><a href="{{ path('home') }}">Accueil</a></li>
+                    <li><a href="{{ path('listeEvent') }}">anciens événements</a></li>
+                    <li><a href="{{ path('equipe') }}">Présentation du BDE</a></li>
+                </ul>
+                <ul class="actions vertical">
+                    <li><a href="{{ path('login') }}" class="button special fit">Connection</a></li>
+                </ul>
+            </nav>
+            <!-- Contenu -->
+            {% block content %}{% endblock %}
+            <!-- Footer -->
+            <footer id="footer">
+                <div class="inner">
+                    <!-- Contact -->
+                    <section id="contact">
+                        <div class="inner">
+                            <section>
+                                <form method="post" action="#">
+                                    <div class="field half first">
+                                        <label for="name">Nom</label>
+                                        <input type="text" name="name" id="name" />
+                                    </div>
+                                    <div class="field half">
+                                        <label for="email">Email</label>
+                                        <input type="text" name="email" id="email" />
+                                    </div>
+                                    <div class="field">
+                                        <label for="message">Message</label>
+                                        <textarea name="message" id="message" rows="6"></textarea>
+                                    </div>
+                                    <ul class="actions">
+                                        <li><input type="submit" value="Envoyer" class="special" /></li>
+                                    </ul>
+                                </form>
+                            </section>
+                            <section class="split">
+                                <section>
+                                    <div class="contact-method">
+                                        <span class="icon alt fa-envelope"></span>
+                                        <h3>Email</h3>
+                                        <a href="mailto:bdefuries@gmail.com">bdefuries@gmail.com</a>
+                                    </div>
+                                </section>
+                                <section>
+                                    <div class="contact-method">
+                                        <span class="icon alt fa-home"></span>
+                                        <h3>Adresse</h3>
+                                        <span>
+                                            5 Rue Saint-Augustin
+                                            <br />
+                                            75002 PARIS
+                                        </span>
+                                    </div>
+                                </section>
+                                <section>
+                                    <div class="contact-method">
+                                        <span class="icon alt fa-facebook"></span>
+                                        <h3>Facebook</h3>
+                                        <a href="https://www.facebook.com/iesabdefuries/" target="_blank">Retrouver notre profil ici !</a>
+                                    </div>
+                                </section>
+                            </section>
+                        </div>
+                    </section>
+
+                    <ul class="copyright">
+                        <li>&copy; TeamCheval</li>
+                    </ul>
+                </div>
+            </footer>
+        </div>
+        <!-- Scripts -->
         {% block javascripts %}{% endblock %}
+        <script src="{{ asset('asset/js/jquery.min.js') }}"></script>
+        <script src="{{ asset('asset/js/jquery.scrolly.min.js') }}"></script>
+        <script src="{{ asset('asset/js/jquery.scrollex.min.js') }}/"></script>
+        <script src="{{ asset('asset/js/skel.min.js') }}"></script>
+        <script src="{{ asset('asset/js/util.js') }}"></script>
+        <script src="{{ asset('asset/js/main.js') }}"></script>
     </body>
 </html>
