--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,23 +1,48 @@
-{# templates/security/login.html.twig #}
-{# ... you will probably extend your base template, like base.html.twig #}
+{% extends 'base.html.twig' %}
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+    {% block content %}
+        <!-- Main -->
+        <div id="main" class="alt">
+            <!-- One -->
+            <section id="one">
+                <div class="inner">
+                    <header class="major">
+                        <h1>Connexion</h1>
+                    </header>
+                    {# templates/security/login.html.twig #}
+                    {# ... you will probably extend your base template, like base.html.twig #}
 
-<form action="{{ path('login') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                    {% if error %}
+                        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    {% endif %}
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+                    <form action="{{ path('login') }}" method="post">
+                        <p>
+                            <label for="username">Username:</label>
+                            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                        </p>
+                        <p>
+                            <label for="password">Password:</label>
+                            <input type="password" id="password" name="_password" />
+                        </p>
+                        <p><a href="{{ path('forgotpassword') }}">Mot de passe oublié</a></p>
 
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
-    <input type="hidden" name="_target_path" value="/teste" />
+                        {#
+                            If you want to control the URL the user
+                            is redirected to on success (more details below)
+                            <input type="hidden" name="_target_path" value="/account" />
+                        #}
+                        <input type="hidden" name="_target_path" value="/profil" />
 
-    <button type="submit">login</button>
-</form>
+                        <input type="hidden" name="_csrf_token"
+                               value="{{ csrf_token('authenticate') }}"
+                        >
+
+
+
+                        <button type="submit">login</button>
+                    </form>
+                </div>
+            </section>
+        </div>
+    {% endblock %}
