--- a/templates/site/latest.html.twig
+++ b/templates/site/latest.html.twig
@@ -7,10 +7,11 @@
             <section id="one">
                 <div class="inner">
                     <header class="major">
-                        <h1>404</h1>
+                        <h1>Latest</h1>
                     </header>
-                    <p>Page non trouvé</p>
-                    <p><a href="{{ path('home') }}">Retour à l'accueil</a></p>
+                    {% for event in latest %}
+                    <p>{{ event.id }}</p>
+                    {% endfor %}
                 </div>
             </section>
         </div>
