added login catch and reorder easy_admin

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,9 +23,17 @@
                     <li><a href="{{ path('listeEvent') }}">anciens événements</a></li>
                     <li><a href="{{ path('equipe') }}">Présentation du BDE</a></li>
                 </ul>
+
+                {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
                 <ul class="actions vertical">
-                    <li><a href="{{ path('login') }}" class="button special fit">Connection</a></li>
+                    <li><a href="/logout" class="button special fit">Logout</a></li>
                 </ul>
+                {% else %}
+                    <ul class="actions vertical">
+                        <li><a href="{{ path('login') }}" class="button special fit">Connection</a></li>
+                    </ul>
+                {% endif %}
+
             </nav>
             <!-- Contenu -->
             {% block content %}{% endblock %}
