next events homepage + event detail page

--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -6,12 +6,28 @@
             <!-- One -->
             <section id="one">
                 <div class="inner">
+                    {% if party %}
                     <header class="major">
-                        <h1>Titre de l'event</h1>
+                        <h1>{{ party.nom }} - {{ party.prix }}</h1>
                     </header>
-                    <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+                    <span class="image main"><img src="{{ asset(party.banner) }}" alt="" /></span>
                     <p>Contenu de l'event</p>
-                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
+                    <p>{{ party.details }}</p>
+                    {% elseif weekend %}
+                    <header class="major">
+                        <h1>{{ weekend.nom }} - {{ weekend.prix }}</h1>
+                    </header>
+                    <span class="image main"><img src="{{ asset(weekend.banner) }}" alt="" /></span>
+                    <p>Contenu de l'event</p>
+                    <p>{{ weekend.details }}</p>
+                    {% else %}
+                    <header class="major">
+                        <h1>{{ exhibit.nom }} - {{ exhibit.prix }}</h1>
+                    </header>
+                    <span class="image main"><img src="{{ asset(exhibit.banner) }}" alt="" /></span>
+                    <p>Contenu de l'event</p>
+                    <p>{{ exhibit.details }}</p>
+                    {% endif %}
                 </div>
             </section>
         </div>
