--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,9 @@
                     <li><a href="{{ path('home') }}">Accueil</a></li>
                     <li><a href="{{ path('listeEvent') }}">anciens événements</a></li>
                     <li><a href="{{ path('equipe') }}">Présentation du BDE</a></li>
+                    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
+                        <li><a href="{{ path('profil') }}">Mon profil</a></li>
+                    {% endif %}
                 </ul>
 
                 {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
