--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -8,24 +8,27 @@
                 <div class="inner">
                     {% if party %}
                     <header class="major">
-                        <h1>{{ party.nom }} - {{ party.prix }}</h1>
+                        <h1>{{ party.nom }}</h1>
                     </header>
                     <span class="image main"><img src="{{ asset(party.banner) }}" alt="" /></span>
-                    <p>Contenu de l'event</p>
+                        <h3>Prix : {{ party.prix }}€</h3>
+                    <h3>Contenu de l'event</h3>
                     <p>{{ party.details }}</p>
                     {% elseif weekend %}
                     <header class="major">
-                        <h1>{{ weekend.nom }} - {{ weekend.prix }}</h1>
+                        <h1>{{ weekend.nom }}</h1>
                     </header>
                     <span class="image main"><img src="{{ asset(weekend.banner) }}" alt="" /></span>
-                    <p>Contenu de l'event</p>
+                        <h3>Prix : {{ weekend.prix }}€</h3>
+                    <h3>Contenu de l'event</h3>
                     <p>{{ weekend.details }}</p>
                     {% else %}
                     <header class="major">
-                        <h1>{{ exhibit.nom }} - {{ exhibit.prix }}</h1>
+                        <h1>{{ exhibit.nom }}</h1>
                     </header>
                     <span class="image main"><img src="{{ asset(exhibit.banner) }}" alt="" /></span>
-                    <p>Contenu de l'event</p>
+                        <h3>Prix : {{ exhibit.prix }}€</h3>
+                    <h3>Contenu de l'event</h3>
                     <p>{{ exhibit.details }}</p>
                     {% endif %}
                 </div>
