--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -6,34 +6,17 @@
             <!-- One -->
             <section id="one">
                 <div class="inner">
-                    {% if party %}
                     <header class="major">
-                        <h1>{{ party.name }}</h1>
-                        <h2>{{ party.date|date('d-m-Y à H:m') }}</h2>
+                        <h1>{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}</h1>
+                        <h2>Le {{ party ? party.date|date('d-m-Y - H:m') : (weekend ? weekend.date|date('d-m-Y - H:m') : exhibit.date|date('d-m-Y - H:m')) }}</h2>
+                        {% if weekend %}
+                        <h4>Jusqu'au {{ weekend.endDate|date('d-m-Y') }}</h4>
+                        {% endif %}
                     </header>
-                    <span class="image main"><img src="{{ asset(party.banner) }}" alt="" /></span>
-                        <h3>Prix : {{ party.price }}€ - Lieu : {{ party.location }}</h3>
+                    <span class="image main"><img src="{{ party ? asset(party.banner) : (weekend ? asset(weekend.banner) : asset(exhibit.banner)) }}" alt="{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}" /></span>
+                        <h3>Prix : {{ party ? party.price : (weekend ? weekend.price : exhibit.price) }} € - Lieu : {{ party ? party.location : (weekend ? weekend.location : exhibit.location) }}</h3>
                     <h3>Contenu de l'event</h3>
-                    <p>{{ party.details }}</p>
-                    {% elseif weekend %}
-                    <header class="major">
-                        <h1>{{ weekend.name }}</h1>
-                        <h2>Du {{ weekend.date|date('d-m-Y') }} au <p>{{ weekend.endDate|date('d-m-Y') }}</p></p>
-                    </header>
-                    <span class="image main"><img src="{{ asset(weekend.banner) }}" alt="" /></span>
-                        <h3>Prix : {{ weekend.price }}€ - Lieu : {{ weekend.location }}</h3>
-                    <h3>Contenu de l'event</h3>
-                    <p>{{ weekend.details }}</p>
-                    {% else %}
-                    <header class="major">
-                        <h1>{{ exhibit.name }}</h1>
-                        <h2>Le {{ exhibit.date|date('d-m-Y à H:m') }}</h2>
-                    </header>
-                    <span class="image main"><img src="{{ asset(exhibit.banner) }}" alt="" /></span>
-                        <h3>Prix : {{ exhibit.price }}€ - Lieu : {{ exhibit.location }}</h3>
-                    <h3>Contenu de l'event</h3>
-                    <p>{{ exhibit.details }}</p>
-                    {% endif %}
+                    <p>{{ party ? party.details : (weekend ? weekend.details : exhibit.details) }}</p>
                 </div>
             </section>
         </div>
