--- a/templates/site/listeEvent.html.twig
+++ b/templates/site/listeEvent.html.twig
@@ -32,9 +32,9 @@
                     {% set e = e|merge([t]) %}
                 {% endfor %}
 
-                {% for event in e|sortbyfield('date') %}
+                {% for event in e|sortbyfield('date')|reverse %}
                 <section>
-                    <a href="generic.html" class="image">
+                    <a href="{{ url('events_event', {name: event.name}) }}" class="image">
                         <img src="{{ asset(event.banner) }}" alt="{{ event.name}}" data-position="center center" />
                     </a>
                     <div class="content">
@@ -44,7 +44,7 @@
                             </header>
                             <p>{{ event.date|date('d-m-Y à H:m') }} / {{ event.location }}</p>
                             <ul class="actions">
-                                <li><a href="event/{{ event.name }}" class="button">Voir plus</a></li>
+                                <li><a href="{{ url('events_event', {name: event.name}) }}" class="button">Voir plus</a></li>
                             </ul>
                         </div>
                     </div>
