--- a/templates/site/home.html.twig
+++ b/templates/site/home.html.twig
@@ -40,7 +40,7 @@
                     </header>
                     <p>Le BDE FURIES est composée de 5 étudiants de l'IESA Multimédia.</p>
                     <ul class="actions">
-                        <li><a href="{{ path('equipe') }}" class="button next">Découvrez les !</a></li>
+                        <li><a href="{{ path('team') }}" class="button next">Découvrez les !</a></li>
                     </ul>
                 </div>
             </section>
