--- a/templates/site/equipe.html.twig
+++ b/templates/site/equipe.html.twig
@@ -21,6 +21,7 @@
         <div id="main">
             <!-- Two -->
             <section id="two" class="spotlights">
+                {% for member in teamMembers %}
                 <section>
                     <a href="generic.html" class="image">
                         <img src="images/pic08.jpg" alt="" data-position="center center" />
@@ -28,38 +29,13 @@
                     <div class="content">
                         <div class="inner">
                             <header class="major">
-                                <h3>Prénom - Poste</h3>
+                                <h3>{{ member.firstName }} {{ member.lastName }} - Poste</h3>
                             </header>
                             <p>Présentation</p>
                         </div>
                     </div>
                 </section>
-                <section>
-                    <a href="generic.html" class="image">
-                        <img src="images/pic09.jpg" alt="" data-position="top center" />
-                    </a>
-                    <div class="content">
-                        <div class="inner">
-                            <header class="major">
-                                <h3>Prénom - Poste</h3>
-                            </header>
-                            <p>Présentation</p>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <a href="generic.html" class="image">
-                        <img src="images/pic10.jpg" alt="" data-position="25% 25%" />
-                    </a>
-                    <div class="content">
-                        <div class="inner">
-                            <header class="major">
-                                <h3>Prénom - Poste</h3>
-                            </header>
-                            <p>Présentation</p>
-                        </div>
-                    </div>
-                </section>
+                {% endfor %}
             </section>
         </div>
     {% endblock %}
