--- a/templates/site/profil.html.twig
+++ b/templates/site/profil.html.twig
@@ -17,15 +17,15 @@
                     <form method="post" action="#">
                         <p>
                             <label for="name">Nom</label>
-                            <input type="text" title="name" id="name">
+                            <input type="text" title="name" id="name" placeholder="{{ app.user.lastName }}">
                         </p>
                         <p>
                             <label for="prenom">Prénom</label>
-                            <input type="text" title="prenom" id="prenom">
+                            <input type="text" title="prenom" id="prenom" placeholder="{{ app.user.firstName }}">
                         </p>
                         <p>
                             <label for="mail">Email</label>
-                            <input type="text" id="mail" title="mail">
+                            <input type="text" id="mail" title="mail" placeholder="{{ app.user.email }}">
                         </p>
                         <p>
                             <label for="image">Photo</label>
