--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,3 +1,5 @@
+{% set asset_base = '/media/' %}
+
 <!DOCTYPE HTML>
 <html>
     <head>
@@ -11,8 +13,9 @@
         <div id="wrapper">
             <!-- Header -->
             <header id="header" class="alt">
-                <a href="{{ path('home') }}" class="logo"><strong>BDE</strong>
-                    <span>IESA Multimédia {{ is_granted('IS_AUTHENTICATED_FULLY') ? app.user.username : '' }}</span>
+                <a href="{{ path('home') }}" class="logo">
+                    <strong>BDE</strong>
+                    <span>IESA Multimédia</span>
                 </a>
                 <nav>
                     <a href="#menu">Menu</a>
@@ -52,15 +55,15 @@
                                 <form method="post" action="#">
                                     <div class="field half first">
                                         <label for="name">Nom</label>
-                                        <input type="text" name="name" id="name" />
+                                        <input type="text" name="name" id="name" placeholder="Votre nom"/>
                                     </div>
                                     <div class="field half">
                                         <label for="email">Email</label>
-                                        <input type="text" name="email" id="email" />
+                                        <input type="text" name="email" id="email" placeholder="michel@mail.com"/>
                                     </div>
                                     <div class="field">
                                         <label for="message">Message</label>
-                                        <textarea name="message" id="message" rows="6"></textarea>
+                                        <textarea name="message" id="message" rows="6" placeholder="Dites nous un truc sympa !"></textarea>
                                     </div>
                                     <ul class="actions">
                                         <li><input type="submit" value="Envoyer" class="special" /></li>
