--- a/templates/site/home.html.twig
+++ b/templates/site/home.html.twig
@@ -23,7 +23,7 @@
                 {% for event in nextEvents|sortbyfield('date') %}
                 <article>
                     <span class="image">
-                        <img src="{{ asset(event.banner) }}" alt="{{ event.name }}" />
+                        <img src="{{ asset_base }}{{ asset(event.banner) }}" alt="{{ event.name }}" />
                     </span>
                     <header class="major">
                         <h3><a href="{{ url('events_event', {name: event.name}) }}" class="link">{{ event.name }}</a></h3>
