Fix checkbox profile

--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -4,6 +4,7 @@
         <!-- Main -->
         <div id="main" class="alt">
             <!-- One -->
+            {{ dump(app.user.exhibit) }}
             <section id="one">
                 <div class="inner">
                     <header class="major">
