User profil, upload avatar

--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -4,7 +4,7 @@
         <!-- Main -->
         <div id="main" class="alt">
             <!-- One -->
-            {{ dump(app.user.exhibit) }}
+            {{ dump(userFollow) }}
             <section id="one">
                 <div class="inner">
                     <header class="major">
