Connection to Connexion parce qu'on est en france mdr

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
                 </ul>
                 {% else %}
                     <ul class="actions vertical">
-                        <li><a href="{{ path('login') }}" class="button special fit">Connection</a></li>
+                        <li><a href="{{ path('login') }}" class="button special fit">Connexion</a></li>
                     </ul>
                 {% endif %}
 
